Add liblc3-dev in Build-Deps
and enable the build option for bluez5 lc3 codec

--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Build-Depends: debhelper-compat (= 13),
                libgstreamer1.0-dev,
                libjack-jackd2-dev,
                libcanberra-dev,
+               liblc3-dev,
                libldacbt-abr-dev [!s390x !hppa !m68k !powerpc !ppc64 !sparc64],
                libldacbt-enc-dev [!s390x !hppa !m68k !powerpc !ppc64 !sparc64],
                liblilv-dev,
