pipewire-alsa: conflict with pulseaudio (Closes: #1013276)

--- a/debian/control
+++ b/debian/control
@@ -248,6 +248,7 @@ Architecture: linux-any
 Multi-Arch: same
 Replaces: pipewire-audio-client-libraries (<< 0.3.54-1~)
 Breaks: pipewire-audio-client-libraries (<< 0.3.54-1~)
+Conflicts: pulseaudio
 Depends: pipewire (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
