--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper-compat (= 13),
                libasound2-dev,
                libavahi-client-dev,
                libbluetooth-dev,
-               libcamera-dev (>= 0.0.1),
+               libcamera-dev (>= 0.0.1) [!m68k !x32],
                libdbus-1-dev,
                libfreeaptx-dev,
                libglib2.0-dev,
