--- a/debian/control
+++ b/debian/control
@@ -37,6 +37,7 @@ Build-Depends: debhelper-compat (= 13),
                libwebrtc-audio-processing-dev,
                libxfixes-dev (>= 1:6.0.0),
                meson (>= 0.59.0),
+               modemmanager-dev,
                pkg-config,
                python3-docutils,
                systemd [linux-any]
