--- a/debian/rules
+++ b/debian/rules
@@ -36,6 +36,7 @@ override_dh_auto_configure:
 		-Daudiotestsrc=enabled \
 		-Dauto_features=enabled \
 		-Davahi=enabled \
+		-Dbluez5-backend-native-mm=enabled \
 		-Dbluez5-codec-aac=disabled \
 		-Dbluez5-codec-aptx=enabled \
 		-Dbluez5-codec-lc3=enabled \
