--- a/debian/control
+++ b/debian/control
@@ -205,7 +205,7 @@ Depends: libpipewire-0.3-modules (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: dbus-user-session,
-            pipewire-media-session | wireplumber,
+            wireplumber | pipewire-media-session,
             rtkit
 Breaks: pipewire (<< 0.3.5)
 Replaces: pipewire (<< 0.3.5)
