pipewire-pulse: Demote pulseaudio-utils from Recommends to Suggests
pactl is not used anymore to load modules since 0.3.63 see b29200ee
The new recommended way to load module is to use "pulse.cmd"

Signed-off-by: Dylan Aïssi <dylan.aissi@collabora.com>

--- a/debian/control
+++ b/debian/control
@@ -248,8 +248,8 @@ Breaks: pipewire-bin (<< 0.3.27-2)
 Depends: pipewire (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Recommends: pulseaudio-utils
-Suggests: libspa-0.2-bluetooth
+Suggests: libspa-0.2-bluetooth,
+          pulseaudio-utils
 Description: PipeWire PulseAudio daemon
  PipeWire is a server and user space API to deal with multimedia
  pipelines. This includes:
