--- a/debian/control
+++ b/debian/control
@@ -248,6 +248,7 @@ Breaks: pipewire-bin (<< 0.3.27-2)
 Depends: pipewire (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
+Recommends: pipewire-alsa
 Suggests: libspa-0.2-bluetooth,
           pulseaudio-utils
 Description: PipeWire PulseAudio daemon
